# Pathtracer

./: .gitignore  CMakeLists.txt  README.md  RayTracing_from_scratch.sln
Assets/: untitled.blend  untitled.blend1
RayTracing_from_scratch/: RayTracing_from_scratch.rc  RayTracing_from_scratch.vcxproj  RayTracing_from_scratch.vcxproj.filters  img.ppm  pch.h  resource.h
RayTracing_from_scratch/include/: RandUtil.h  RenderHeaders.h  Renderer.h  pch.h
RayTracing_from_scratch/include/Camera/: PinholeCamera.h
RayTracing_from_scratch/include/Light/: DirectionLight.h  Light.h  PointLight.h  PrimitiveLight.h
RayTracing_from_scratch/include/Loader/: AssimpLoader.h  AssimpUtils.h  SDLLoader.h  SceneLoader.h
RayTracing_from_scratch/include/Object/: GroundPlane.h  Mesh.h  Object.h  Triangle.h
RayTracing_from_scratch/include/Rendering/: BVHTree.h  FlatTree.h  FrameManager.h  Light.h  ObjectTree.h  PinholeCamera.h  Ray.h  RenderManager.h  Renderer.h  RenderingUtils.h  Scene.h
RayTracing_from_scratch/include/Rendering/Integrator/: Integrator.h  SamplerIntegrator.h
RayTracing_from_scratch/include/Rendering/Utils/: Spectrum.h
RayTracing_from_scratch/include/Shading/: BxDF.h  DiffuseMaterial.h  GlossyMaterial.h  Material.h  PhongMaterial.h  PhongRaytracingMaterial.h  RGBTexture.h  RefractiveMaterial.h  Texture.h
RayTracing_from_scratch/include/Shading/Textures/: RGBTexture.h  TextureManager.h
RayTracing_from_scratch/source/: RayTracing_from_scratch.cpp
RayTracing_from_scratch/source/Light/: DirectionLight.cpp  Light.cpp  PointLight.cpp  PrimitiveLight.cpp
RayTracing_from_scratch/source/Loader/: AssimpLoader.cpp  AssimpUtils.cpp  SDLLoader.cpp  SceneLoader.cpp
RayTracing_from_scratch/source/Object/: GroundPlane.cpp  Mesh.cpp  Object.cpp  Triangle.cpp
RayTracing_from_scratch/source/Rendering/: BVHTree.cpp  FlatTree.cpp  FrameManager.cpp  Light.cpp  PinholeCamera.cpp  Ray.cpp  RenderManager.cpp  Renderer.cpp  Scene.cpp
RayTracing_from_scratch/source/Rendering/Integrator/: Integrator.cpp  SamplerIntegrator.cpp
RayTracing_from_scratch/source/Shading/: BxDF.cpp  DiffuseMaterial.cpp  GlossyMaterial.cpp  Material.cpp  PhongMaterial.cpp  PhongRaytracingMaterial.cpp  RGBTexture.cpp  RefractiveMaterial.cpp  Texture.cpp
RayTracing_from_scratch/source/Shading/Textures/: TextureManager.cpp
dependencies/Eigen/: CMakeLists.txt
src/: PTracer.cpp  PTracer.h
src/include/: RandUtil.h  RenderHeaders.h  pch.h
src/include/Camera/: PinholeCamera.h
src/include/Light/: DirectLight.h  Light.h  PointLight.h  PrimitiveLight.h
src/include/Loader/: AssimpLoader.h  AssimpUtils.h  SDLLoader.h
src/include/Object/: GroundPlane.h  Mesh.h  Object.h
src/include/Rendering/: BVHTree.h  FlatTree.h  FrameManager.h  NodeHierarchy.h  Ray.h  RenderingUtils.h  Scene.h
src/include/Rendering/Integrator/: Integrator.h  SamplerIntegrator.h
src/include/Shading/: DiffuseMaterial.h  GlossyMaterial.h  Material.h  PhongMaterial.h  RefractiveMaterial.h
src/include/Shading/Textures/: RGBTexture.h  TextureManager.h
src/include/Threading/: Barrier.h  ThreadPool.h  Threading.h  Work.h
src/source/Light/: DirectLight.cpp  PointLight.cpp
src/source/Loader/: SDLLoader.cpp
src/source/Object/: Mesh.cpp
src/source/Rendering/: BVHTree.cpp  FrameManager.cpp  Scene.cpp
src/source/Rendering/Integrator/: Integrator.cpp
src/source/Shading/Textures/: RGBTexture.cpp
src/source/Threading/: ThreadPool.cpp  ThreadingManager.cpp
